--- a/Labos2.ipynb
+++ b/Labos2.ipynb
@@ -283,13 +283,15 @@
     "yzero = float(temp[18][6:])\n",
     "npts = int(temp[8][6:])\n",
     "# čitanje valnog oblika\n",
-    "meas1 = splitwavefrm[4].split()\n",
+    "meas1 = splitwavefrm[-1].split()\n",
     "temp = meas1[0].split(',')\n",
     "meas1 = np.array(temp[1:])\n",
     "meas1 = meas1.astype(float)*ymult\n",
     "time1 = np.arange(xzero,npts*xincr+xzero,xincr)\n",
-    "# pohranjivanje mjerenja u datoteku\n",
-    "np.savetxt('meas1.csv', np.transpose([time1,meas1]), delimiter=',')"
+    "# pohranjivanje mjerenja u datoteku (odkomentirajte sljedeće dvije naredbe ukoliko postoji razlika u dužini meas1 i time1 vektora)\n",
+    "#nmin=min(len(meas1),len(time1))\n",
+    "#time1=time1[0:nmin]\n",
+    "np.savetxt('meas1.csv', np.transpose([time1,meas1]), delimiter=',')\n"
    ]
   },
   {
@@ -396,12 +398,14 @@
     "yzero = float(temp[18][6:])\n",
     "npts = int(temp[8][6:])\n",
     "# čitanje valnog oblika\n",
-    "meas2 = splitwavefrm[4].split()\n",
+    "meas2 = splitwavefrm[-1].split()\n",
     "temp = meas2[0].split(',')\n",
     "meas2 = np.array(temp[1:])\n",
     "meas2 = meas2.astype(float)*ymult+yzero\n",
     "time2 = np.arange(xzero,npts*xincr+xzero,xincr)\n",
-    "# pohranjivanje mjerenja u datoteku\n",
+    "# pohranjivanje mjerenja u datoteku (odkomentirajte sljedeće dvije naredbe ukoliko postoji razlika u dužini meas1 i time1 vektora)\n",
+    "#nmin=min(len(meas1),len(time1))\n",
+    "#time1=time1[0:nmin]\n",
     "np.savetxt('meas2.csv', np.transpose([time2,meas2]), delimiter=',')"
    ]
   },
@@ -440,12 +444,14 @@
     "yzero = float(temp[18][6:])\n",
     "npts = int(temp[8][6:])\n",
     "# čitanje valnog oblika\n",
-    "meas3 = splitwavefrm[4].split()\n",
+    "meas3 = splitwavefrm[-1].split()\n",
     "temp = meas3[0].split(',')\n",
     "meas3 = np.array(temp[1:])\n",
     "meas3 = meas3.astype(float)*ymult+yzero\n",
     "time3 = np.arange(xzero,npts*xincr+xzero,xincr)\n",
-    "# pohranjivanje mjerenja u datoteku\n",
+    "# pohranjivanje mjerenja u datoteku (odkomentirajte sljedeće dvije naredbe ukoliko postoji razlika u dužini meas1 i time1 vektora)\n",
+    "#nmin=min(len(meas1),len(time1))\n",
+    "#time1=time1[0:nmin]\n",
     "np.savetxt('meas3.csv', np.transpose([time3,meas3]), delimiter=',')"
    ]
   },
